--- a/templates/chat.html
+++ b/templates/chat.html
@@ -106,7 +106,7 @@
     <!-- Modal do dodawania znajomych -->
     <div id="add-friend-modal" class="friend-search-panel" style="display: none;">
         <div class="search-header">
-            <input type="text" id="friend-user-id" placeholder="Wprowadź 6-cyfrowe ID znajomego">
+            <input type="text" id="friend-user-id" placeholder="Wprowadź nazwę użytkownika">
             <button class="search-close">&times;</button>
         </div>
         <div class="search-results">
