--- a/templates/chat.html
+++ b/templates/chat.html
@@ -64,7 +64,7 @@
                 <div class="welcome-message">
                     <h3>Witaj w czacie z szyfrowaniem end-to-end!</h3>
                     <p>Wybierz istniejącą konwersację z listy po lewej stronie lub dodaj nowego znajomego, aby rozpocząć czat.</p>
-                    <p>Wszystkie wiadomości są szyfrowane i chronione przed podsłuchem!</p>
+                   
                 </div>
             </div>
             <div id="input-area">
@@ -113,7 +113,7 @@
             <div id="friend-request-form">
                 <div class="search-result-item">
                     <div class="result-info">
-                        <div class="result-message">Wprowadź ID użytkownika, którego chcesz dodać do znajomych</div>
+                        <div class="result-message">Wprowadź nazwe użytkownika, którego chcesz dodać do znajomych</div>
                     </div>
                     <button id="send-friend-request-btn" class="result-action-btn">Wyślij zaproszenie</button>
                 </div>
